# Computer-Graphics-Project

code/: CMakeLists.txt  Texture.cpp  Texture.h  animation.cpp  animation.h  camera.cpp  camera.h  desk.cpp  desk.h  keyboard.cpp  keyboard.h  main.cpp  main.h  monitor.cpp  monitor.h  room.cpp  room.h  test.cpp
code/include/GL/: freeglut_std.h  glut.h
